# jsinterop-annotations

./: BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  build_test.sh  release_jsinterop_annotations.sh
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: release.yaml  release_prep.sh
java/jsinterop/annotations/: BUILD  JsAsync.java  JsConstructor.java  JsEnum.java  JsFunction.java  JsIgnore.java  JsMethod.java  JsNonNull.java  JsNullable.java  JsOptional.java  JsOverlay.java  JsPackage.java  JsProperty.java  JsType.java  import_annotations_jar.bzl
maven/: pom-annotations.xml  publish_to_sonatype.sh  release_jsinterop_annotations.sh
