module(
    name = "jsinterop_annotations",
    repo_name = "com_google_jsinterop_annotations",
)

bazel_dep(name = "j2cl", repo_name = "com_google_j2cl", version = "20250630")

# Use head j2cl for testing purposes.
archive_override(
    module_name = "j2cl",
    strip_prefix = "j2cl-master",
    urls = ["https://github.com/google/j2cl/archive/master.zip"],
)

bazel_dep(
    name = "rules_java",
    version = "8.6.1",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

bazel_dep(
    name = "rules_license",
    version = "1.0.0",
)

bazel_dep(
    name = "google_bazel_common",
    version = "0.0.1",
)
